--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/vunkpunk/vunkpunk-backend"
 python = "^3.12"
 django = "^5.1.2"
 djangorestframework="^3.15.2"
+dotenv = "^0.0.5"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.10.1"
