--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.12"
 django = "^5.1.2"
 djangorestframework="^3.15.2"
 python-dotenv = "^1.0.1"
+djoser = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.10.1"
