--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django = "^5.1.2"
 djangorestframework="^3.15.2"
 python-dotenv = "^1.0.1"
 djoser = "^2.2.3"
+pillow="^11.0.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.10.1"
